# wasit

./: .dir-locals.el  .gitignore  .gitmodules  .ignore  Cargo.toml  Containerfile  README.md  dev.scm  preview1.witx  rustfmt.toml  wasmtime-cov-allowlist.txt
collect/: Cargo.toml
compile-time/: Cargo.toml  build.rs
compile-time/src/: lib.rs
configs/: all.yaml  node-wasmedge.yaml  node-wasmtime.yaml  wamr-wasmedge-1m.yaml  wamr-wasmedge.yaml  wamr-wasmtime-1m.yaml  wamr-wasmtime.yaml  wasmtime-wasmedge.yaml
dyn-fuzzer/: Cargo.toml
dyn-fuzzer/src/: fuzzer.rs  lib.rs  main.rs
dyn-spec/: Cargo.toml
dyn-spec/src/: ast.rs  context.rs  environment.rs  index_space.rs  interface.rs  lib.rs  resource_ctx.rs  term.rs  wasi.rs
dyn-spec/tests/: preview1.rs
executor/: CMakeLists.txt  Cargo.toml  build.rs  main.c  wazzi-executor.capnp  wazzi-executor.proto
executor-pb/: Cargo.toml  build.rs  main.c  wasi_snapshot_preview1.h  wazzi-executor.pb-c.c  wazzi-executor.pb-c.h  wazzi-executor.proto
executor-pb/pb-c/: Cargo.toml  build.rs
executor/capnp/: Cargo.toml  build.rs
executor/capnp-c/: Cargo.toml  build.rs
executor/capnp/src/: lib.rs
executor/capnpc-c/: Cargo.toml  build.rs
executor/pb/c/: Cargo.toml  build.rs
executor/pb/rust/: Cargo.toml  build.rs
executor/pb/rust/src/: lib.rs
executor/protobuf-c/autogen/: Cargo.toml  build.rs
executor/protobuf-c/wasm/: Cargo.toml  build.rs
executor/src/: lib.rs  main.rs
fuzzer/: Cargo.toml
fuzzer/src/: lib.rs  store.rs
idxspace/: Cargo.toml
idxspace/src/: lib.rs
paper/: abstract.tex  background.tex  introduction.tex  main.bbl  main.blg  main.tex  methodology.tex  ref.bib  wazzi.sty
paper/figures/: workflow.tex
repro/00/: README.md  data  dot  metadata.yaml  svg
repro/01/: README.md  data  metadata.yaml  tmin.dot
repro/02/: metadata.yaml  tmin.dot
repro/03/: metadata.yaml  tmin.dot
repro/04/: metadata.yaml  tmin.dot
repro/05/: data  metadata.yaml  tmin.dot
repro/06/: metadata.yaml  tmin.dot
repro/07/: data  metadata.yaml  tmin.dot
runners/: Cargo.toml
runners/src/: lib.rs  run.js.tera.tmpl
runners/tests/: seeds.rs
seeds/: 00-creat.json  01-creat_write.json  01-write.json  02-args.json  03-environ.json  04-clock.json  05-creat_write_read.json  05-read_after_write.json  06-advise.json  07-allocate.json  07-fd_allocate.json  08-close.json  08-close_after_write.json  08-fd_close.json  08-read_after_close.json  09-datasync.json  09-fd_datasync.json  10-fd_fdstat_get.json  10-fdstat_get.json  11-fd_fdstat_set_flags.json  11-fdstat_set_flags.json  12-fdstat_set_rights.json  13-fd_filestat_get.json  13-filestat_get.json  14-fd_filestat_set_size.json  14-filestat_set_size.json  15-fd_filestat_set_times.json  15-filestat_set_times.json  16-fd_pread.json  16-pread.json  17-prestat_get.json  18-fd_prestat_dir_name.json  18-prestat_dir_name.json  19-fd_pwrite.json  19-pwrite.json  20-fd_readdir.json  20-readdir.json  21-fd_renumber.json  22-fd_sync.json  23-fd_tell.json  (+9 more)
snapshot/: Cargo.toml
snapshot/src/: lib.rs  store.rs
spec/: Cargo.toml  preview1-simple.als  preview1.all  preview1.als  preview1.dep.thm  preview1.dyn-constraint.witx  preview1.thm  preview1.witx
spec/constraint/: Cargo.toml
spec/constraint/src/: lib.rs  program.rs
spec/evaluator/: Cargo.toml
spec/evaluator/src/: lib.rs  program.rs
spec/preview1/witx/: typenames.witx  wasi_snapshot_preview1.witx
spec/src/: ast.rs  error.rs  lib.rs  package.rs
spec/src/parsers/: mod.rs
spec/src/parsers/wazzi_preview1/: mod.rs
spec/src/parsers/wazzi_preview1/testdata/: 00.witx  03.witx
spec/src/parsers/wazzi_preview1_old/: mod.rs
spec/src/parsers/wazzi_preview1_old/testdata/: 01.witx  02.witx  04.witx  05.witx  06.witx
spec/tests/: main.rs
specz/: Cargo.toml  preview1.witx
specz/preview1/: Cargo.toml  main.witx
specz/preview1/src/: lib.rs  spec.rs  term.rs  witx.pest  witx.rs
specz/preview1/src/witx/: elang.pest  elang.rs  slang.pest  slang.rs
specz/src/: lib.rs  main.rs  resource.rs  solve.rs  type_def.rs
specz/src/function_picker/: mod.rs  resource.rs  solver.rs
specz/src/param_generator/: mod.rs  solver.rs  stateful.rs  stateless.rs
specz/src/preview1/: mod.rs  spec.rs  witx.rs
specz/src/preview1/witx/: elang.rs  slang.pest  slang.rs
specz/src/slang/: fs.rs  mod.rs  path.rs
specz/wasi/: Cargo.toml
specz/wasi/src/: effects.rs  lib.rs  term.rs  value.rs
src/: lib.rs  main.rs  normalization.rs  resource.rs
src/spec/: mod.rs  preview1.witx  witx.pest  witx.rs
src/strategy/: mod.rs  stateful.rs  stateless.rs
store/: Cargo.toml
store/src/: lib.rs
strace/: Cargo.toml
strace/src/: lib.rs  parse.rs
strace/testdata/: 01  02
strace/tests/: attach.rs  (+1 more)
tmin/: Cargo.toml
tmin/src/: main.rs
tools/: activate.zsh  artifact.bash  build-runtimes.bash  build-runtimes.nu  count-calls.py  cov.nu  dev.bash  env.fish  get-shas.bash  guix-shell.bash  merge-prof-wasmtime.nu  merge-prof.nu  run-throughput.nu  sancov.nu
wasi/: Cargo.toml
wasi/component-model/: Cargo.toml
wasi/component-model/src/: value.rs
wasi/specs/: minimal.witx
wasi/src/: action.rs  call.rs  capnp.rs  capnp_mappers.rs  lib.rs  pb.rs  prog.rs  recorder.rs  resource_ctx.rs  run_store.rs  seed.rs  store.rs
wasi/src/prog/: action.rs  call.rs  error.rs  final.rs  mod.rs  seed.rs  stateful.rs
wasi/src/snapshot/: mod.rs  store.rs
wasi/src/snapshot/store/: fs.rs  mem.rs
wasi/tests/: args.rs  clock.rs  environ.rs  fs.rs  prog_seed.rs  seed.rs  seeds.rs
wasi/tests/args/: mod.rs
wasi/tests/clock/: mod.rs
wasi/tests/common/: mod.rs
wasi/tests/environ/: mod.rs
wasi/tests/fs/: mod.rs
wazi/: Cargo.toml
wazi/component-model/src/: lib.rs  value.rs
wazi/src/: prog.rs  resource_ctx.rs  seed.rs
wazi/tests/: seeds.rs
witx/: Cargo.toml  back_to_sex.witx
witx/src/: abi.rs  ast.rs  io.rs  lib.rs  parser.rs  phases.rs  polyfill.rs  render.rs  representation.rs  validate.rs
witx/src/docs/: ast.rs  md.rs  mod.rs
witx/tests/: resources.rs  witxt.rs
witx/tests/witxt/: wasi.witxt
z3/: fs-unquant.py  fs.py
(+26 files in other folders)
