[workspace.package]
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "compile-time",
    # "dyn-fuzzer",
    # "dyn-spec",
    "executor",
    "executor/pb/c",
    "executor/pb/rust",
    "executor/protobuf/build",
    "executor/protobuf-c/build",
    "executor/protobuf-c/wasm",
    # "fuzzer",
    "idxspace",
    "runners",
    # "spec",
    # "spec/constraint",
    "specz",
    "store",
    # "tmin",
    "wasi",
    "wasi/component-model",
    "wasi-sdk/build",
    "witx",
]

[workspace.dependencies]
idxspace.path = "idxspace"
wasi-sdk.path = "wasi-sdk/build"
wazzi-compile-time.path = "compile-time"
wazzi-dyn-spec.path = "dyn-spec"
wazzi-executor.path = "executor"
wazzi-executor-pb-c.path = "executor/pb/c"
wazzi-executor-pb-rust.path = "executor/pb/rust"
wazzi-executor-protobuf.path = "executor/protobuf/build"
wazzi-executor-protobuf-c.path = "executor/protobuf-c/build"
wazzi-executor-protobuf-c-wasm.path = "executor/protobuf-c/wasm"
# wazzi-fuzzer.path = "fuzzer"
wazzi-runners.path = "runners"
wazzi-snapshot.path = "snapshot"
# wazzi-spec.path = "spec"
# wazzi-spec-constraint.path = "spec/constraint"
wazzi-store.path = "store"
wazzi-wasi.path = "wasi"
wazzi-wasi-component-model.path = "wasi/component-model"
wazzi-witx.path = "witx"

arbitrary = "1"
bimap = "0.6"
cc = "*"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
gcollections = "1"
git2 = "0.18.2"
intervallum = "1"
itertools = "0.12"
nix = { version = "0.28", features = ["process", "signal"] }
nom = "7"
nom_locate = "4"
nom-supreme = "0.8"
num-bigint = "0.4"
once_cell = "1"
pest = "2"
pest_derive = "2"
petgraph = "0.6"
protobuf = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tera = "1"
thiserror = "1"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
z3 = { git = "https://github.com/prove-rs/z3.rs.git" }
# z3-sys = { git = "https://github.com/prove-rs/z3.rs.git" }
