[package]
name = "wazzi"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
default-run = "wazzi"

[dependencies]
wazzi-executor.workspace = true
wazzi-executor-pb-rust.workspace = true
wazzi-runners.workspace = true
wazzi-store.workspace = true

arbitrary.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
eyre.workspace = true
idxspace.workspace = true
itertools = "0.12"
num-bigint = "0.4"
pest = "2"
pest_derive = "2"
petgraph = "0.6"
rand = "0.8"
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2"
z3 = { git = "https://github.com/yagehu/z3.rs.git", branch = "wazzi" }
z3-sys = { git = "https://github.com/yagehu/z3.rs.git", branch = "wazzi" }

[build-dependencies]

[workspace.package]
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "compile-time",
    "executor",
    "executor/pb/c",
    "executor/pb/rust",
    "executor/protobuf/build",
    "executor/protobuf-c/build",
    "executor/protobuf-c/wasm",
    "idxspace",
    "runners",
    "store",
    "wasi-sdk/build",
]

[workspace.dependencies]
idxspace.path = "idxspace"
wasi-sdk.path = "wasi-sdk/build"
wazzi-compile-time.path = "compile-time"
wazzi-dyn-spec.path = "dyn-spec"
wazzi-executor.path = "executor"
wazzi-executor-pb-c.path = "executor/pb/c"
wazzi-executor-pb-rust.path = "executor/pb/rust"
wazzi-executor-protobuf.path = "executor/protobuf/build"
wazzi-executor-protobuf-c.path = "executor/protobuf-c/build"
wazzi-executor-protobuf-c-wasm.path = "executor/protobuf-c/wasm"
wazzi-runners.path = "runners"
wazzi-store.path = "store"

arbitrary = "1"
bimap = "0.6"
cc = "*"
color-eyre = "0.6"
eyre = "0.6"
gcollections = "1"
nix = { version = "0.28", features = ["process", "signal"] }
nom = "7"
nom_locate = "4"
nom-supreme = "0.8"
once_cell = "1"
protobuf = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tera = "1"
thiserror = "1"
tracing = "0.1"
