[package]
name = "wazzi-dyn-fuzzer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-dyn-spec.workspace = true
wazzi-executor.workspace = true
wazzi-runners.workspace = true
wazzi-spec.workspace = true
wazzi-store.workspace = true

arbitrary.workspace = true
color-eyre.workspace = true
eyre.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
