[package]
name = "wazzi-dyn-spec"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-spec.workspace = true

arbitrary.workspace = true
eyre.workspace = true
thiserror.workspace = true

[dev-dependencies]
wazzi-executor.workspace = true
wazzi-executor-pb-rust.workspace = true
wazzi-runners.workspace = true

nom.workspace = true
nom-supreme.workspace = true
tempfile.workspace = true
