[package]
name = "wazzi-executor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor-pb-rust.workspace = true

protobuf.workspace = true
wasi = "0.11"

[build-dependencies]
wasi-sdk = { workspace = true, optional = true }
wazzi-executor-pb-c.workspace = true
wazzi-executor-protobuf-c-wasm.workspace = true

[features]
build-protobuf = [
    "wazzi-executor-pb-c/build-protobuf",
    "wazzi-executor-protobuf-c-wasm/build-protobuf",
]
build-wasi-sdk = ["wasi-sdk"]
