[package]
name = "wazzi-executor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor-pb-rust.workspace = true

protobuf.workspace = true
wasi = "0.11"

[build-dependencies]
wazzi-executor-pb-c.workspace = true
wazzi-executor-protobuf-c-wasm.workspace = true
