[package]
name = "wazzi-fuzzer"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor.workspace = true
wazzi-runners.workspace = true
wazzi-spec.workspace = true
wazzi-store.workspace = true
wazzi-wazi.workspace = true

arbitrary.workspace = true
color-eyre.workspace = true
git2.workspace = true
rand.workspace = true
tracing.workspace = true
