[package]
name = "wazzi-runners"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor-pb-rust.workspace = true

dyn-clone.workspace = true
eyre.workspace = true
protobuf.workspace = true
serde.workspace = true
tera.workspace = true
tracing.workspace = true

[dev-dependencies]
