[package]
name = "wazzi-spec"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-spec-constraint.workspace = true

eyre.workspace = true
nom.workspace = true
nom_locate.workspace = true
nom-supreme.workspace = true
num-bigint.workspace = true
petgraph.workspace = true
thiserror.workspace = true
