[package]
name = "wazzi-specz"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor-pb-rust.workspace = true
wazzi-executor.workspace = true
wazzi-specz-preview1.workspace = true
wazzi-specz-wasi.workspace = true

arbitrary.workspace = true
eyre.workspace = true
num-bigint.workspace = true
tracing.workspace = true
z3.workspace = true

[dev-dependencies]
wazzi-runners.workspace = true

color-eyre.workspace = true
tempfile.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
