[package]
name = "wazzi-specz"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
idxspace.workspace = true
wazzi-executor-pb-rust.workspace = true
wazzi-executor.workspace = true
wazzi-runners.workspace = true
wazzi-specz-preview1.workspace = true
wazzi-store.workspace = true

arbitrary.workspace = true
bimap.workspace = true
clap.workspace = true
color-eyre.workspace = true
walkdir.workspace = true
eyre.workspace = true
itertools.workspace = true
num-bigint.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
z3.workspace = true
z3-sys.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
