[package]
name = "wazzi-wasi"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-executor.workspace = true
wazzi-executor-capnp.workspace = true
wazzi-runners.workspace = true
wazzi-witx.workspace = true

arbitrary.workspace = true
capnp.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
