[package]
name = "wazzi-wasi"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
strace.workspace = true
wazzi-executor.workspace = true
wazzi-executor-pb-rust.workspace = true
wazzi-runners.workspace = true
wazzi-witx.workspace = true

arbitrary.workspace = true
color-eyre.workspace = true
git2.workspace = true
nom.workspace = true
once_cell.workspace = true
protobuf.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
wazzi-compile-time.workspace = true
wazzi-executor.workspace = true

tempfile.workspace = true
