[package]
name = "wazi"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[[test]]
name = "seeds"
harness = false

[dependencies]
wazzi-executor.workspace = true
wazzi-executor-pb-rust.workspace = true
wazzi-spec.workspace = true
wazzi-store.workspace = true
wazzi-wasi-component-model.workspace = true

eyre.workspace = true
serde.workspace = true

[dev-dependencies]
wazzi-compile-time.workspace = true
wazzi-runners.workspace = true

arbitrary.workspace = true
color-eyre.workspace = true
serde_json.workspace = true
tempfile.workspace = true
