[package]
name = "wazzi-witx"
version = "0.1.0"
description = "Parse and validate witx file format"
edition = "2021"
publish = false

[lib]
crate-type=["rlib"]

[dependencies]
anyhow = "1"
log = "0.4"
petgraph.workspace = true
thiserror = "1.0"
wast = { version = "35.0.2", default-features = false }

[dev-dependencies]
rayon = "1.0"

[[test]]
name = "witxt"
harness = false
