[package]
name = "wazzi-specz-preview1"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
wazzi-specz-wasi.workspace = true

eyre.workspace = true
pest.workspace = true
pest_derive.workspace = true
tracing.workspace = true

[dev-dependencies]
color-eyre.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
