[package]
name = "wazzi-executor-pb-c"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]

[build-dependencies]
wasi-sdk = { workspace = true, optional = true }
wazzi-compile-time.workspace = true
wazzi-executor-protobuf = { workspace = true, optional = true }
wazzi-executor-protobuf-c.workspace = true

[features]
build-protobuf = [
    "wazzi-executor-protobuf",
    "wazzi-executor-protobuf-c/build-protobuf",
]
build-wasi-sdk = ["wasi-sdk"]
