[package]
name = "wazzi-executor-protobuf-c-wasm"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]

[build-dependencies]
wasi-sdk = { workspace = true, optional = true }
wazzi-compile-time.workspace = true
wazzi-executor-protobuf = { workspace = true, optional = true }

[features]
build-protobuf = ["wazzi-executor-protobuf"]
build-wasi-sdk = ["wasi-sdk"]
